third_party/rust/cxx/v1/crate/tests/ui/enum_inconsistent.stderr
error: expected u16, found i64
 --> $DIR/enum_inconsistent.rs:5:9
  |
5 |         B = 2i64,
  |         ^^^^^^^^
