third_party/rust/cxx/v1/crate/tests/ui/enum_inconsistent.rs
#[cxx::bridge]
mod ffi {
    enum Bad {
        A = 1u16,
        B = 2i64,
    }
}

fn main() {}
